# pytest-pyspark-utils

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
docs/: index.md
src/pytest_pyspark_delta_caching/: __init__.py  delta_caching.py  plugin.py
src/pytest_pyspark_utils/: __init__.py  delta_caching.py  fixtures.py  models.py  plugin.py  utils.py
src/sample_pyspark_app/: stats.py
tests/: conftest.py  delta_caching.py  schema.py  test_pyspark_delta_caching.py  test_pyspark_fixutre.py  test_utils.py
tests/test_csv/: conftest.py  test_sample_tables.py  test_sample_tables_csv.py
tests/test_csv/expected/: expected_dataset1.csv  expected_departments_stats.csv  expected_employees_stats.csv
tests/test_csv/input/: dataset2.csv
tests/test_jsonl/: conftest.py  test_sample_tables_jsonl.py
tests/test_jsonl/expected/: expected_dataset1.jsonl  expected_departments_stats.jsonl
tests/test_jsonl/input/: dataset1.jsonl
