[build-system]
requires = [
  "setuptools>=61.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-pyspark-utils"
description = "A simple plugin to use with pytest"
version = "0.1.0"
readme = "README.rst"
requires-python = ">=3.10"
authors = [
    { name = "Alex Volok", email = "alexandr.volok@gmail.com" },
]
maintainers = [
    { name = "Alex Volok", email = "alexandr.volok@gmail.com" },
]
license = {file = "LICENSE"}
classifiers = [
    "Framework :: Pytest",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
dependencies = [
    "pytest>=6.2.0",
    "chispa==0.12.0"
]

[dependency-groups]
dev=[
  "pre-commit==4.6.0",
  "pyspark==4.0.2",
  # "ty==0.0.24"
]

[project.optional-dependencies]
[project.urls]
Repository = "https://github.com/avolok/pytest-pyspark-utils"
[project.entry-points.pytest11]
pyspark-utils = "pytest_pyspark_utils.plugin"

[tool.pytest.ini_options]
pythonpath = ["."]
delta_jar = "io.delta:delta-spark_2.13:4.0.1"
spark_app_name = "my-project-tests"