[build-system]
requires = [
  "setuptools>=61.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-pyspark-utils"
description = "A simple plugin to use with pytest"
version = "1.0.2"
readme = "README.rst"
requires-python = ">=3.10"
authors = [
    { name = "Alex Volok", email = "alexandr.volok@gmail.com" },
]
maintainers = [
    { name = "Alex Volok", email = "alexandr.volok@gmail.com" },
]
license = {file = "LICENSE"}
classifiers = [
    "Framework :: Pytest",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
dependencies = [
    "pytest>=6.2.0",
    "chispa==0.12.0"
]

[dependency-groups]
dev=[
  "pre-commit==4.6.0",
  "pyspark==4.0.2",
  "pytest-cov>=5.0.0",
  # "ty==0.0.24"
]

[project.optional-dependencies]
[project.urls]
Repository = "https://github.com/avolok/pytest-pyspark-utils"
[project.entry-points.pytest11]
pyspark-utils = "pytest_pyspark_utils.plugin"

[tool.pytest.ini_options]
pythonpath = ["."]
delta_jar = "io.delta:delta-spark_2.13:4.0.1"
spark_app_name = "my-project-tests"


[tool.semantic_release]

assets = []
build_command_env = []
commit_message = "{version}\n\nAutomatically generated by python-semantic-release"
commit_parser = "conventional"
logging_use_named_masks = false
major_on_zero = true
allow_zero_version = false
no_git_verify = false
tag_format = "v{version}"
add_partial_tags = false

build_command = "python -m pip install build && python -m build"

branch = "main"
version_toml = ["pyproject.toml:project.version"]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.changelog] 
changelog_file = ""
exclude_commit_patterns = []
mode = "update"
insertion_flag = "<!-- version list -->"
template_dir = "templates"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md" # or "md" for Markdown format
mask_initial_release = true

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.ruff]
line-length = 120
fix = true